# gap-conf-kaggle

./: .gitignore  .gitmodules  README.md  TODO  analysis_data.py  bert_estimator.py  gpt2_estimator.py  load_data.py  output_submission.py  pyproject.toml  score.py  tox.ini  utils.py
models/: base_model.py  bert_model.py  gpt2_model.py  name_only_model.py  nn_model.py  sample_model.py  stanfordnlp_model.py  true_or_false_model.py
tests/: test_gpt2model.py  test_score.py  test_stanfordnlpmode.py  test_utils.py
